# planeats_app

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  INTEGRATION_SUMMARY.md  Makefile  README.md  docker-compose.yml  schema.sql  sprint_planning.md
backend/: .flake8  Dockerfile  alembic.ini  create_test_auth.py  create_test_recipes.py  create_test_user.py  debug_recommendations.py  main.py  pyproject.toml  requirements.txt  startup.sh  test_custom_recipe.py  test_import_debug.py  test_mealdb_connection.py  test_simple_mealdb.py
backend/alembic/: env.py
backend/alembic/versions/: 6c819394c7da_create_initial_tables.py  7775bfacd9f6_add_image_url_to_pantryitem.py  95eac7b8909b_add_disliked_ingredients_to_.py  c1516b67634a_add_cuisine_preferences_to_.py
backend/app/: __init__.py  main.py
backend/app/core/: config.py  middleware.py  (+1 more)
backend/docs/: US6.8_Security_Implementation.md  mealdb_integration.md
backend/tests/: __init__.py  conftest.py  test_auth.py  test_backend_connectivity.py  test_custom_recipe.py  test_mealdb_integration.py  test_pantry.py  test_pantry_filters.py  test_preference_logic.py  test_recipe_filtering.py  test_recipes.py  test_recommendations.py  test_recommendations_filters.py  test_simple_recipes.py  test_update_user_preferences.py  test_us2_4_update_pantry.py  test_us2_5_delete_pantry.py  test_us4_1_basic_recommendations.py  test_us4_1_fix.py  test_us4_3_filters.py  test_us4_4_ai_recipes.py  test_us5_1_view_preferences.py  test_us5_2_update_preferences.py  test_user_preferences.py  test_view_user_preferences.py
(+174 files in other folders)
