[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "planeats"
version = "0.1.0"
description = "PlanEats Backend"
requires-python = ">=3.9"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=app --cov-report=term-missing"

[tool.coverage.run]
source = ["app"]

[tool.hatch.build.targets.wheel]
packages = ["app"] 